add memory demo